unpackaged/main/default/objects/Renewal_Self_Serve_Oppty_update_insert__e/Renewal_Self_Serve_Oppty_update_insert__e.object-meta.xml
<CustomObject>
    <label>Renewal Self Serve Oppty update/insert</label>
    <pluralLabel>Renewal Self Serve Oppty updates/inserts</pluralLabel>
</CustomObject>