unpackaged/main/default/objects/Renewal_Self_Serve_Oppty_update_insert__e/fields/Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_ID__c</fullName>
    <label>Agent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>