unpackaged/main/default/objects/Renewal_Self_Serve_Oppty_update_insert__e/fields/event__c.field-meta.xml
<CustomField>
    <fullName>event__c</fullName>
    <label>event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>