unpackaged/main/default/objects/Renewal_Self_Serve_Oppty_update_insert__e/fields/Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status__c</fullName>
    <label>Opportunity Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>